make SFX volume half fix title of searchMoreResult in mobile fix wrapper for medium fix quiz position and made it very center make background of tags gradient fix questionChanger btn make overflow img option hidden

--- a/frontend/static/css/base/_globals.scss
+++ b/frontend/static/css/base/_globals.scss
@@ -486,6 +486,11 @@ input {
     margin-bottom: 4rem;
     position: relative;
     z-index: 1;
+
+    @include breakpoints-down(medium) {
+        max-width: 16rem;
+        margin: 0 auto 4rem auto;
+    }
 }
 
 .lowTitle {
