--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -40,11 +40,6 @@
   }
 }
 
-.wrapper-med {
-  max-width: 67.5rem;
-  margin: 1.125rem auto;
-}
-
 @media (max-width: 49.9375em) {
   .wrapper-med {
     max-width: 45.75rem;
@@ -55,6 +50,14 @@
 @media (min-width: 40em) {
   .wrapper-med {
     max-width: 50rem;
+    margin: 1.125rem auto;
+  }
+}
+
+@media (min-width: 50em) {
+  .wrapper-med {
+    max-width: 67.5rem;
+    margin: 1.125rem auto;
   }
 }
 
@@ -752,6 +755,13 @@ input {
   margin-bottom: 4rem;
   position: relative;
   z-index: 1;
+}
+
+@media (max-width: 49.9375em) {
+  .title {
+    max-width: 16rem;
+    margin: 0 auto 4rem auto;
+  }
 }
 
 .lowTitle {
@@ -1910,7 +1920,7 @@ body {
 
 .quiz__container {
   max-width: 30rem;
-  margin: auto 2rem;
+  margin: auto 1.25rem;
   margin-top: 5rem;
   padding: 0.1rem;
   border-radius: 24px;
@@ -2016,6 +2026,7 @@ body {
 
 .quiz__questionChanger {
   cursor: pointer;
+  pointer-events: all;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2068,6 +2079,7 @@ body {
   width: 2rem;
   -webkit-transform: rotate(90deg);
           transform: rotate(90deg);
+  pointer-events: all;
 }
 
 .quiz__bottomQuestionChanger__container {
@@ -2107,7 +2119,7 @@ body {
 
 @media (min-width: 40em) {
   .quiz__hider {
-    width: 44rem;
+    width: 47rem;
     bottom: auto;
     margin-bottom: 3rem;
   }
@@ -2165,6 +2177,7 @@ body {
   transition: -webkit-box-shadow .1s ease-in-out;
   transition: box-shadow .1s ease-in-out;
   transition: box-shadow .1s ease-in-out, -webkit-box-shadow .1s ease-in-out;
+  overflow: hidden;
 }
 
 .quiz__options__imgLabel:hover {
@@ -2286,11 +2299,12 @@ body {
   font-size: .9rem;
   font-family: myHarmattan, sans-serif;
   color: white;
+  background: linear-gradient(-45deg, darkRed, transparent);
   z-index: 1;
   position: relative;
   border: none;
-  border-bottom: 1px solid darkRed !important;
-  border-right: 1px solid darkRed !important;
+  border-bottom: 0.5px solid rgba(255, 255, 255, 0.46) !important;
+  border-right: 0.5px solid rgba(255, 255, 255, 0.46) !important;
   border-radius: 20px;
   padding-right: 0.8rem;
   padding-left: 0.8rem;
